--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -33,6 +33,7 @@
     "@tanstack/react-form": "^1.14.1",
     "@tanstack/react-query": "^5.75.5",
     "@tanstack/react-router": "^1.120.2",
+    "@tanstack/react-table": "^8.21.3",
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
@@ -44,6 +45,7 @@
     "react-dom": "^19.1.0",
     "react-select": "^5.10.2",
     "react-stately": "^3.39.0",
+    "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.3.0",
     "tailwind-variants": "^1.0.0",
     "tailwindcss": "^4.1.5",
@@ -89,6 +91,7 @@
     "playwright": "^1.52.0",
     "prettier": "3.5.3",
     "storybook": "^8.6.12",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "unplugin-icons": "^22.1.0",
