--- a/apps/api/sqlc.yml
+++ b/apps/api/sqlc.yml
@@ -26,5 +26,8 @@ sql:
             nullable: true
             go_type:
               type: "*time.Time"
+          - db_type: uuid
+            nullable: true
+            go_type: "*github.com/google/uuid.UUID"
 
 
