--- a/apps/api/.air.toml
+++ b/apps/api/.air.toml
@@ -9,6 +9,7 @@ testdata_dir = "testdata"
   exclude_regex = ["_test.go"]
   include_ext = ["go", "tpl", "tmpl", "html"]
   log = "build-errors.log"
+  poll = true
 
 [color]
   app = ""
