--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -45,6 +45,7 @@
     "react-aria": "^3.41.1",
     "react-aria-components": "^1.10.1",
     "react-dom": "^19.1.0",
+    "react-error-boundary": "^6.0.0",
     "react-select": "^5.10.2",
     "react-stately": "^3.39.0",
     "react-toastify": "^11.0.5",
