--- a/apps/web/src/forms/application.json
+++ b/apps/web/src/forms/application.json
@@ -134,7 +134,7 @@
             {
               "name": "school",
               "questionType": "select",
-              "placeholder": "Select your school",
+              "placeholder": "Start typing...",
               "label": "School",
               "required": true,
               "searchable": true,
@@ -149,14 +149,14 @@
               "label": "Level of Study",
               "required": true,
               "options": [
-                { "label": "High School", "value": "0" },
-                { "label": "Undergraduate", "value": "1" },
-                { "label": "Graduate", "value": "2" },
+                { "label": "High School", "value": "high_school" },
+                { "label": "Undergraduate", "value": "undergraduate" },
+                { "label": "Graduate", "value": "graduate" },
                 {
                   "label": "Professional / Continuing Education",
-                  "value": "3"
+                  "value": "professional"
                 },
-                { "label": "Other", "value": "4" }
+                { "label": "Other", "value": "other" }
               ]
             }
           ]
@@ -173,12 +173,12 @@
               "label": "Year in College",
               "required": true,
               "options": [
-                { "label": "1st Year", "value": "1" },
-                { "label": "2nd Year", "value": "2" },
-                { "label": "3rd Year", "value": "3" },
-                { "label": "4th Year", "value": "4" },
-                { "label": "Graduate Student", "value": "5" },
-                { "label": "Other", "value": "6" }
+                { "label": "1st Year", "value": "first_year" },
+                { "label": "2nd Year", "value": "second_year" },
+                { "label": "3rd Year", "value": "third_year" },
+                { "label": "4th Year", "value": "fourth_year" },
+                { "label": "Graduate Student", "value": "graduate" },
+                { "label": "Other", "value": "other" }
               ]
             },
             {
@@ -228,11 +228,11 @@
           "label": "How many hackathons have you participated in?",
           "required": true,
           "options": [
-            { "label": "Swamphacks would be my first!", "value": "0" },
-            { "label": "1", "value": "1" },
-            { "label": "2", "value": "2" },
-            { "label": "3", "value": "3" },
-            { "label": "4", "value": "4" }
+            { "label": "Swamphacks would be my first!", "value": "first_time" },
+            { "label": "1", "value": "one" },
+            { "label": "2", "value": "two" },
+            { "label": "3", "value": "three" },
+            { "label": "4+", "value": "four_or_more" }
           ]
         },
         {
@@ -243,13 +243,13 @@
           "options": [
             {
               "label": "No, this is my first programming experience",
-              "value": "no-first"
+              "value": "no_experience"
             },
             {
               "label": "No, but I have experience programming in my courses",
-              "value": "no-course"
+              "value": "course_experience"
             },
-            { "label": "Yes", "value": "yes" }
+            { "label": "Yes", "value": "independent_project" }
           ]
         },
         {
@@ -259,9 +259,11 @@
           "placeholder": "Select your size",
           "required": true,
           "options": [
-            { "label": "Small", "value": "small" },
-            { "label": "Medium", "value": "medium" },
-            { "label": "Large", "value": "large" }
+            { "label": "Small", "value": "S" },
+            { "label": "Medium", "value": "M" },
+            { "label": "Large", "value": "L" },
+            { "label": "X-Large", "value": "XL" },
+            { "label": "XX-Large", "value": "XXL" }
           ]
         },
         {
@@ -303,10 +305,10 @@
           "options": [
             { "label": "Instagram", "value": "instagram" },
             { "label": "Discord", "value": "discord" },
-            { "label": "Linkedin", "value": "linkedin" },
-            { "label": "Word of Mouth", "value": "wordOfMouth" },
+            { "label": "LinkedIn", "value": "linkedin" },
+            { "label": "Word of Mouth", "value": "word_of_mouth" },
             { "label": "Website", "value": "website" },
-            { "label": "Class Announcement", "value": "classAnnouncement" },
+            { "label": "Class Announcement", "value": "class_announcement" },
             { "label": "Other", "value": "other" }
           ]
         }
@@ -323,14 +325,14 @@
           "questionType": "checkbox",
           "label": "I consent to SwampHacks photo and video policy. We will be taking pictures and recording videos throughout the events for promotional use.",
           "required": true,
-          "options": [{ "label": "I agree", "value": "1" }]
+          "options": [{ "label": "I agree", "value": "agree" }]
         },
         {
           "name": "inpersonAcknowledgement",
           "questionType": "checkbox",
           "label": "By submitting this application, I recognize that SwampHacks is an in-person only event and my in-person attendance is expected if I am offered acceptance. I also recognize that SwampHacks will be providing free meals but will not be covering transportation costs. ",
           "required": true,
-          "options": [{ "label": "I agree", "value": "1" }]
+          "options": [{ "label": "I agree", "value": "agree" }]
         }
       ]
     },
@@ -346,21 +348,21 @@
           "questionType": "checkbox",
           "label": "I have read and agree to the MLH Code of Conduct.",
           "required": true,
-          "options": [{ "label": "I agree", "value": "1" }]
+          "options": [{ "label": "I agree", "value": "agree" }]
         },
         {
           "name": "infoShareAuthorization",
           "questionType": "checkbox",
           "label": "I authorize you to share my application/registration information with Major League Hacking for event administration, ranking, and MLH administration in-line with the MLH Privacy Policy. I have read and agree to the MLH Code of Conduct.",
           "required": true,
-          "options": [{ "label": "I agree", "value": "1" }]
+          "options": [{ "label": "I agree", "value": "agree" }]
         },
         {
           "name": "agreeToMLHEmails",
           "questionType": "checkbox",
           "label": "I authorize MLH to send me occasional emails about relevant events, career opportunities, and community announcements.",
           "required": false,
-          "options": [{ "label": "I agree", "value": "1" }]
+          "options": [{ "label": "I agree", "value": "agree" }]
         }
       ]
     }
