--- a/.github/workflows/dev-build-deplay-web.yml
+++ b/.github/workflows/dev-build-deplay-web.yml
@@ -46,7 +46,7 @@ jobs:
   deploy:
     name: Deploy to Development Server
     runs-on: ubuntu-latest
-    needs: [build-and-push, run-migrations]
+    needs: [build-and-push]
 
     steps:
       - name: SSH proxy commmand
