--- a/.github/workflows/dev-build-deplay-web.yml
+++ b/.github/workflows/dev-build-deplay-web.yml
@@ -41,6 +41,7 @@ jobs:
             --platform linux/amd64,linux/arm64 \
             --push \
             -t ghcr.io/${{ github.repository_owner }}/core-web:dev \
+            --file ./apps/web/Dockerfile.dev \
             ./apps/web
 
   deploy:
