--- a/apps/api/sqlc.yml
+++ b/apps/api/sqlc.yml
@@ -9,7 +9,7 @@ sql:
         out: "internal/db/sqlc"
         emit_json_tags: true
         emit_prepared_queries: false
-        emit_interface: true
+        emit_interface: false
         emit_exact_table_names: false
         emit_pointers_for_null_types: true
         emit_empty_slices: true
@@ -29,5 +29,3 @@ sql:
           - db_type: uuid
             nullable: true
             go_type: "*github.com/google/uuid.UUID"
-
-
