--- a/apps/api/Makefile
+++ b/apps/api/Makefile
@@ -9,3 +9,8 @@ migrate-down:
 generate:
 	@sqlc generate
 	
+openapi-generate:
+	swag init --dir cmd/api,internal/api/handlers --parseDependency -v3.1
+
+openapi-format:
+	swag f --dir cmd/api,internal/api/handlers
