chore: refactor types and add staff modal

--- a/apps/api/Makefile
+++ b/apps/api/Makefile
@@ -10,7 +10,7 @@ generate:
 	@sqlc generate
 	
 openapi-generate:
-	swag init --dir cmd/api,internal/api/handlers --parseDependency -v3.1
+	swag init --dir cmd/api,internal/api/handlers --parseDependency --requiredByDefault -v3.1
 
 openapi-format:
 	swag f --dir cmd/api,internal/api/handlers
