--- a/apps/api/docs/swagger.yaml
+++ b/apps/api/docs/swagger.yaml
@@ -6,6 +6,9 @@ components:
           type: string
         source:
           type: string
+      required:
+      - email
+      - source
       type: object
     handlers.AssignRoleFields:
       properties:
@@ -15,6 +18,10 @@ components:
           $ref: '#/components/schemas/sqlc.EventRoleType'
         user_id:
           type: string
+      required:
+      - email
+      - role
+      - user_id
       type: object
     handlers.CompleteOnboardingRequest:
       properties:
@@ -22,6 +29,9 @@ components:
           type: string
         preferred_email:
           type: string
+      required:
+      - name
+      - preferred_email
       type: object
     handlers.CreateEventFields:
       properties:
@@ -56,9 +66,17 @@ components:
       required:
       - application_close
       - application_open
+      - decision_release
+      - description
       - end_time
+      - is_published
+      - location
+      - location_url
+      - max_attendees
       - name
+      - rsvp_deadline
       - start_time
+      - website_url
       type: object
     handlers.NullableEventRole:
       properties:
@@ -70,6 +88,11 @@ components:
           $ref: '#/components/schemas/sqlc.EventRoleType'
         user_id:
           type: string
+      required:
+      - assigned_at
+      - event_id
+      - role
+      - user_id
       type: object
     handlers.QueueEmailRequest:
       properties:
@@ -79,11 +102,17 @@ components:
           type: string
         to:
           type: string
+      required:
+      - body
+      - from
+      - to
       type: object
     handlers.UpdateEmailConsentRequest:
       properties:
         email_consent:
           type: boolean
+      required:
+      - email_consent
       type: object
     handlers.UpdateProfileRequest:
       properties:
@@ -91,6 +120,9 @@ components:
           type: string
         preferred_email:
           type: string
+      required:
+      - name
+      - preferred_email
       type: object
     middleware.UserContext:
       description: Information about the current user session.
@@ -127,6 +159,15 @@ components:
           example: 550e8400-e29b-41d4-a716-446655440000
           format: uuid
           type: string
+      required:
+      - email
+      - emailConsent
+      - image
+      - name
+      - onboarded
+      - preferredEmail
+      - role
+      - userId
       type: object
     response.ErrorResponse:
       properties:
@@ -134,6 +175,9 @@ components:
           type: string
         message:
           type: string
+      required:
+      - error
+      - message
       type: object
     sqlc.Application:
       properties:
@@ -154,6 +198,14 @@ components:
           type: string
         user_id:
           type: string
+      required:
+      - application
+      - created_at
+      - event_id
+      - saved_at
+      - status
+      - updated_at
+      - user_id
       type: object
     sqlc.ApplicationStatus:
       enum:
@@ -197,6 +249,18 @@ components:
           $ref: '#/components/schemas/sqlc.AuthUserRole'
         updated_at:
           type: string
+      required:
+      - created_at
+      - email
+      - email_consent
+      - email_verified
+      - id
+      - image
+      - name
+      - onboarded
+      - preferred_email
+      - role
+      - updated_at
       type: object
     sqlc.AuthUserRole:
       description: Role assigned to the user
@@ -243,6 +307,24 @@ components:
           type: string
         website_url:
           type: string
+      required:
+      - application_close
+      - application_open
+      - banner
+      - created_at
+      - decision_release
+      - description
+      - end_time
+      - id
+      - is_published
+      - location
+      - location_url
+      - max_attendees
+      - name
+      - rsvp_deadline
+      - start_time
+      - updated_at
+      - website_url
       type: object
     sqlc.EventRoleType:
       enum:
@@ -282,6 +364,19 @@ components:
           $ref: '#/components/schemas/sqlc.AuthUserRole'
         updated_at:
           type: string
+      required:
+      - created_at
+      - email
+      - email_consent
+      - email_verified
+      - event_role
+      - id
+      - image
+      - name
+      - onboarded
+      - preferred_email
+      - role
+      - updated_at
       type: object
     sqlc.GetEventsWithUserInfoRow:
       properties:
@@ -323,6 +418,26 @@ components:
           type: string
         website_url:
           type: string
+      required:
+      - application_close
+      - application_open
+      - application_status
+      - banner
+      - created_at
+      - decision_release
+      - description
+      - end_time
+      - event_role
+      - id
+      - is_published
+      - location
+      - location_url
+      - max_attendees
+      - name
+      - rsvp_deadline
+      - start_time
+      - updated_at
+      - website_url
       type: object
     sqlc.NullApplicationStatus:
       properties:
@@ -331,6 +446,9 @@ components:
         valid:
           description: Valid is true if ApplicationStatus is not NULL
           type: boolean
+      required:
+      - application_status
+      - valid
       type: object
     sqlc.NullEventRoleType:
       properties:
@@ -339,6 +457,9 @@ components:
         valid:
           description: Valid is true if EventRoleType is not NULL
           type: boolean
+      required:
+      - event_role_type
+      - valid
       type: object
 externalDocs:
   description: ""
@@ -950,6 +1071,66 @@ paths:
       summary: Get all staff users for an event
       tags:
       - Event
+  /users:
+    get:
+      description: Get or search for users by name or email. If no search term is
+        provided, returns all users with pagination.
+      parameters:
+      - description: The authenticated session token/id
+        in: cookie
+        name: sh_session
+        required: true
+        schema:
+          type: string
+      - description: Search term to filter users by name or email (optional)
+        in: query
+        name: search
+        schema:
+          type: string
+      - description: Maximum number of users to return (default is 50)
+        in: query
+        name: limit
+        schema:
+          maximum: 100
+          minimum: 1
+          type: integer
+      - description: Number of users to skip for pagination (default is 0)
+        in: query
+        name: offset
+        schema:
+          minimum: 0
+          type: integer
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/sqlc.AuthUser'
+                type: array
+          description: 'OK: Returns a list of users matching the search criteria,
+            or all users if no search term is provided.'
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/response.ErrorResponse'
+          description: Invalid query parameter(s)
+        "401":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/response.ErrorResponse'
+          description: 'Unauthenticated: Requester is not currently authenticated.'
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/response.ErrorResponse'
+          description: Failed to retrieve users
+      summary: Get/Search for users
+      tags:
+      - User
   /users/email-consent:
     patch:
       description: Update the user's email consent setting
