--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,10 +27,11 @@ services:
   web:
     build:
       context: ./apps/web
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
+      target: dev
     volumes:
-      - ./apps/web:/app
-      - web_node_modules:/app/node_modules
+      - ./apps/web:/app:cached
+      - /app/node_modules
     ports:
       - "5173:5173"
     environment:
@@ -71,6 +72,5 @@ services:
 
 volumes:
   postgres_data:
-  web_node_modules:
     
     
