--- a/.github/workflows/prod-build-deploy-web.yml
+++ b/.github/workflows/prod-build-deploy-web.yml
@@ -1,12 +1,12 @@
-name: Deploy Web to Development
+name: Deploy Web to Production
 
 on:
   push:
     branches:
-      - dev
+      - main
     paths:
       - 'apps/web/**'
-      - 'infra/docker-compose.dev.yml'
+      - 'infra/docker-compose.web.yml'
   workflow_dispatch:
 
 permissions:
@@ -40,12 +40,13 @@ jobs:
           docker buildx build \
             --platform linux/amd64,linux/arm64 \
             --push \
-            -t ghcr.io/${{ github.repository_owner }}/core-web:dev \
-            --file ./apps/web/Dockerfile.dev \
+            -t ghcr.io/${{ github.repository_owner }}/core-web:latest \
+            --file ./apps/web/Dockerfile \
+            --target prod \
             ./apps/web
 
   deploy:
-    name: Deploy to Development Server
+    name: Deploy to Production server
     runs-on: ubuntu-latest
     needs: [build-and-push]
 
@@ -53,21 +54,16 @@ jobs:
       - name: SSH proxy commmand
         uses: appleboy/ssh-action@v1
         with:
-          host: ${{ secrets.SSH_HOST_SWAMPHACKS }}
-          username: ${{ secrets.SSH_USERNAME_SWAMPHACKS }}
-          key: ${{ secrets.SSH_KEY_SWAMPHACKS }}
-          port: ${{ secrets.SSH_PORT_SWAMPHACKS }}
-          proxy_host: ${{ secrets.SSH_HOST_JUMP }}
-          proxy_username: ${{ secrets.SSH_USERNAME_JUMP }}
-          proxy_key: ${{ secrets.SSH_KEY_JUMP }}
-          proxy_port: ${{ secrets.SSH_PORT_JUMP }}
+          host: ${{ secrets.WEB_HOST }}
+          username: root
+          password: ${{ secrets.WEB_PASSWORD }}
           script: |
-            cd /home/admin/core/infra
+            cd /root/core/infra
             git fetch
-            git checkout dev
-            git reset --hard origin/dev
+            git checkout main
+            git reset --hard origin/main
             git pull
-            infisical export --env=dev --format=dotenv --path="/web" --projectId=${{ secrets.INFISICAL_PROJECT_ID }} > ./secrets/.env.dev.web
-            docker compose -f docker-compose.dev.yml pull dev-web
-            docker compose -f docker-compose.dev.yml up -d --no-deps --force-recreate dev-web
+            infisical export --env=prod --format=dotenv --path="/web" --projectId=${{ secrets.INFISICAL_PROJECT_ID }} > ./secrets/.env.web
+            docker compose -f docker-compose.web.yml pull web
+            docker compose -f docker-compose.web.yml up -d --no-deps --force-recreate web
 
