--- a/.github/workflows/prod-build-deploy-web.yml
+++ b/.github/workflows/prod-build-deploy-web.yml
@@ -1,9 +1,9 @@
-name: Deploy Web to Development
+name: Deploy Web to Production
 
 on:
   push:
     branches:
-      - dev
+      - main
     paths:
       - 'apps/web/**'
       - 'infra/docker-compose.web.yml'
@@ -40,13 +40,13 @@ jobs:
           docker buildx build \
             --platform linux/amd64,linux/arm64 \
             --push \
-            -t ghcr.io/${{ github.repository_owner }}/core-web:dev \
+            -t ghcr.io/${{ github.repository_owner }}/core-web:latest \
             --file ./apps/web/Dockerfile \
             --target prod \
             ./apps/web
 
   deploy:
-    name: Deploy to Development Server
+    name: Deploy to Production server
     runs-on: ubuntu-latest
     needs: [build-and-push]
 
@@ -60,10 +60,10 @@ jobs:
           script: |
             cd /root/core/infra
             git fetch
-            git checkout dev
-            git reset --hard origin/dev
+            git checkout main
+            git reset --hard origin/main
             git pull
-            infisical export --env=dev --format=dotenv --path="/web" --projectId=${{ secrets.INFISICAL_PROJECT_ID }} > ./secrets/.env.dev.web
-            docker compose -f docker-compose.web.yml pull web-dev
-            docker compose -f docker-compose.web.yml up -d --no-deps --force-recreate web-dev
+            infisical export --env=prod --format=dotenv --path="/web" --projectId=${{ secrets.INFISICAL_PROJECT_ID }} > ./secrets/.env.web
+            docker compose -f docker-compose.web.yml pull web
+            docker compose -f docker-compose.web.yml up -d --no-deps --force-recreate web
 
