--- a/.github/workflows/prod-build-deploy-web.yml
+++ b/.github/workflows/prod-build-deploy-web.yml
@@ -22,12 +22,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up QEMU for cross-platform builds
-        uses: docker/setup-qemu-action@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
         with:
@@ -35,15 +29,18 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push multi-arch image
+      - name: Build Docker image
         run: |
-          docker buildx build \
-            --platform linux/amd64,linux/arm64 \
-            --push \
+          docker build \
+            --platform linux/amd64 \
             -t ghcr.io/${{ github.repository_owner }}/core-web:latest \
             --file ./apps/web/Dockerfile \
             --target prod \
             ./apps/web
+
+      - name: Push Docker image
+        run: |
+          docker push ghcr.io/${{ github.repository_owner }}/core-web:latest
 
   deploy:
     name: Deploy to Production server
