--- a/.github/workflows/prod-build-deploy-api.yml
+++ b/.github/workflows/prod-build-deploy-api.yml
@@ -6,7 +6,7 @@ on:
       - master
     paths:
       - 'apps/api/**'
-      - 'infra/docker-compose.yml'
+      - 'infra/docker-compose.api.yml'
   workflow_dispatch:
 
 permissions:
@@ -24,12 +24,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up QEMU for cross-platform builds
-        uses: docker/setup-qemu-action@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
         with:
@@ -37,13 +31,12 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push multi-arch image
+      - name: Build and push Docker image
         run: |
-          docker buildx build \
-            --platform linux/amd64,linux/arm64 \
-            --push \
+          docker build \
             -t ghcr.io/${{ github.repository_owner }}/core-api:latest \
             ./apps/api
+          docker push ghcr.io/${{ github.repository_owner }}/core-api:latest
 
   run-migrations:
     name: Run Goose Migrations
@@ -71,20 +64,15 @@ jobs:
       - name: SSH proxy commmand
         uses: appleboy/ssh-action@v1
         with:
-          host: ${{ secrets.SSH_HOST_SWAMPHACKS }}
-          username: ${{ secrets.SSH_USERNAME_SWAMPHACKS }}
-          key: ${{ secrets.SSH_KEY_SWAMPHACKS }}
-          port: ${{ secrets.SSH_PORT_SWAMPHACKS }}
-          proxy_host: ${{ secrets.SSH_HOST_JUMP }}
-          proxy_username: ${{ secrets.SSH_USERNAME_JUMP }}
-          proxy_key: ${{ secrets.SSH_KEY_JUMP }}
-          proxy_port: ${{ secrets.SSH_PORT_JUMP }}
+          host: ${{ secrets.API_HOST }}
+          username: root
+          password: ${{ secrets.API_PASSWORD }}
           script: |
-            cd /home/admin/core/infra
+            cd /root/core/infra
             git fetch
             git checkout master
             git reset --hard origin/master
             git pull
             infisical export --env=prod --format=dotenv --path="/api" --projectId=${{ secrets.INFISICAL_PROJECT_ID }} > ./secrets/.env.api
-            docker compose pull api
-            docker compose up -d --no-deps --force-recreate api
+            docker compose -f docker-compose.api.yml pull api
+            docker compose -f docker-compose.api.yml up -d --no-deps --force-recreate api
